fixed Hide